--- a/01.aws-console.md
+++ b/01.aws-console.md
@@ -1,4 +1,4 @@
-# AWS Introduction VPC EC2 lab
+# AWS introduction with a VPC EC2 lab
 
 ## Objectives
 
@@ -30,7 +30,7 @@ The most convenient way to navigate AWS web console is to use the research bar o
 During this lab you will learn how to create the base infrastructure for a virtual data center ready to host your applications.
 You will get familiar with AWS main constructs for Cloud Networking, Security and Compute.
 
-___ 
+---
 
 ## User Management
 
@@ -50,6 +50,7 @@ For example :
 If you create an application that will on daily basis fetch AWS logs and create a PDF report of users activity ( a random example :] ) your application will need read access to AWS log service (CloudTrail), and write access to AWS storage service (S3) to publish its report.
 
 You will then create a role named : `barad-dûr` with the policy :
+
 ```json
 {
     "Version": "2012-10-17",
@@ -68,17 +69,15 @@ You will then create a role named : `barad-dûr` with the policy :
 }
 ```
 
-
 1. Verify the permissions of your user in IAM.
 
-Go to IAM > Users
+    Go to IAM > Users
 
-You have a dedicated AWS user but all the labs are using the same AWS Account. With great power comes great responsibility, pay attention to the IDs and Tags of the objects/constructs you create to prevent overlapping on someone else work. Please be mindful of others ;)
+    You have a dedicated AWS user but all the labs are using the same AWS Account. With great power comes great responsibility, pay attention to the IDs and Tags of the objects/constructs you create to prevent overlapping on someone else work. Please be mindful of others ;)
 
-Note that all users activities are logged in [AWS CloudTrail](https://us-east-1.console.aws.amazon.com/cloudtrail/home?region=us-east-1#/events)...
+    Note that all users activities are logged in [AWS CloudTrail](https://us-east-1.console.aws.amazon.com/cloudtrail/home?region=us-east-1#/events)...
 
-
-___ 
+---
 
 ## Virtual Private Cloud
 
@@ -96,37 +95,34 @@ This lab is meant to be didactic, AWS offers configuration abstraction GUI wizar
 
 2. Launch AWS VPC wizard
 
-Create a **`VPC Only`** VPC. Do not forget to give it a distinctive name and feel free to add some tags that could be useful to filter your resources later on like a `lab-id` with a unique identifier for all the resources you are going to create during the lab.
+    Create a **`VPC Only`** VPC. Do not forget to give it a distinctive name and feel free to add some tags that could be useful to filter your resources later on like a `lab-id` with a unique identifier for all the resources you are going to create during the lab.
 
-![](images/aws_vpc_create.png)
-VPC Overview
+    ![](images/aws_vpc_create.png)
 
-Congrats you have a virtual DataCenter with a dummy router connected to nothing !!! Take some time to inspect your VPC and the objects created by AWS automatically.
+    Congrats you have a virtual DataCenter with a dummy router connected to nothing !!! Take some time to inspect your VPC and the objects created by AWS automatically.
 
-- DHCP options set : DHCP options for the resources requesting IP addresses.
-- Main routing table : a dummy router. If not specify differently subnetS will be associated with that routing table by default.
-- Main network ACL : a dummy Firewall.
+    - DHCP options set : DHCP options for the resources requesting IP addresses.
+    - Main routing table : a dummy router. If not specify differently subnet will be associated with that routing table by default.
+    - Main network ACL : a dummy Firewall.
 
-[AWS documentation : Custom Route Tables](https://docs.aws.amazon.com/vpc/latest/userguide/VPC_Route_Tables.html#CustomRouteTables)
+    [AWS documentation : Custom Route Tables](https://docs.aws.amazon.com/vpc/latest/userguide/VPC_Route_Tables.html#CustomRouteTables)
 
-AWS only applied a `tag` to the main element - the VPC - you can manually add the `lab-id` tag and a `name` to those resources to make it easier to find them later on.
+    AWS only applied a `tag` to the main element - the VPC - you can manually add the `lab-id` tag and a `name` to those resources to make it easier to find them later on.
 
-**Question 1 (lab report).** Provide your `tag` and `lab-id` that you used and show that it is associated to your instances.
+    **Question 1 (lab report).** Provide your `tag` and `lab-id` that you used and show that it is associated to your instances.
 
-**Question 1 (lab report).** Provide your `tag` and `lab-id` that you used and show that it is associated to your instances. 
+    Note : When looking at a list of objects in AWS console you can always filter the resources by `id` or `tags` key/value:
 
-Note : When looking at a list of objects in AWS console you can always filter the resources by `id` or `tags` key/value:
+    ![](images/tags_details.png)
 
-![](images/tags_details.png)
-
-
-### Create a Public and Private subnet.
+### Create a Public and Private subnet
 
 The notion of private and public subnet in AWS is similar to the traditional datacenter design with a DMZ and a private infrastructure.
 Resources on a DMZ can have a public IPv4 address or can be publicly reached from internet using predefined static NAT entry in conjunction of firewall rules.
 On the other side, resources on a private network should not be reachable from internet and can only access internet via a router performing dynamic NAPT (Network And Port Translation). This is enforced by firewall rules.
 
 On a classical - and may be outdated - three tier application, frontend, backend, database, the network connectivity should look like the following :
+
 - You want to serve customer on a Publicly reachable network (most likely behind a load balancer).
 - Have your backend service running a on a private network with firewall policies allowing the frontend to reach the backend. The backend could reach internet for package update, and applications download.
 - Finally your database on a dedicated network with firewall policies to allow only connections from your backend.
@@ -141,15 +137,15 @@ To be able to give a network access to your EC2 instances in your VPC you need t
 
 3. In the AWS `VPC resource` create two new `subnet` from the VPC CIDR one `public` and `private`.
 
-Note : You do not have to select an Availability Zone (AZ), AWS will select one for you. AWS define an AZ as an isolated location within a Region. Each AWS datacenter in a region has several L2 switch fabrics isolated from each other. You can decide on which fabric your subnet/resources will be connected/running. For a production setup, it's a best practice to create several subnets in different AZ to prevent downtimes in case of network failure.
+    Note : You do not have to select an Availability Zone (AZ), AWS will select one for you. AWS define an AZ as an isolated location within a Region. Each AWS datacenter in a region has several L2 switch fabrics isolated from each other. You can decide on which fabric your subnet/resources will be connected/running. For a production setup, it's a best practice to create several subnets in different AZ to prevent downtimes in case of network failure.
 
-You now have in your Virtual Data Center, two switches fabrics connected to the previously created router.
+    You now have in your Virtual Data Center, two switches fabrics connected to the previously created router.
 
-You could already instantiate Virtual Machines (EC2) to your VPC but they would be confined in your Datacenter as they are not connected to the WAN.
+    You could already instantiate Virtual Machines (EC2) to your VPC but they would be confined in your Datacenter as they are not connected to the WAN.
 
 ### WAN connectivity
 
-For your VM to have a WAN access you must specify the type of connections : 
+For your VM to have a WAN access you must specify the type of connections :
 
 **NAT Gateway (v4) Egress Only Internet Gateway (IPv6)** : The construct to build a private network with Internet access.
 
@@ -159,43 +155,40 @@ It's the classical NAT construct. You need to create a NAT Gateway and _pay_ a P
 
 This is the historical construct of AWS, VMs used to be publicly available. 
 Only one can be allocated per VPC and it's available across AZ.
-Technically speaking the Internet GW is doing 1:1 NAT for your instances. At provisioning time AWS allocates a Public IPv4 address for your instance and keeps a <Public IPv4>:<Private IP> translation. The public IPv4 address is allocated but not assigned to your instance, AWS can re-allocate another IP if your reboot your VM. You could also buy a static public IP from AWS if needed [AWS Documentation : Elastic IP](https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/elastic-ip-addresses-eip.html). 
+Technically speaking the Internet GW is doing 1:1 NAT for your instances. At provisioning time AWS allocates a Public IPv4 address for your instance and keeps a `<Public IPv4>:<Private IP>` translation. The public IPv4 address is allocated but not assigned to your instance, AWS can re-allocate another IP if your reboot your VM. You could also buy a static public IP from AWS if needed [AWS Documentation : Elastic IP](https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/elastic-ip-addresses-eip.html). 
 
 If a subnet has a routing table entry to the Internet gateway it's referred as a `public network`.
 
-1. Add an Internet Gateway in your VPC
+4. Add an Internet Gateway in your VPC
 
-Note : Do not forget add `name` and custom `tags`
+    Note : Do not forget add `name` and custom `tags`
 
-After you created an IGW check that its state is `detached`. Fix that !
+    After you created an IGW check that its state is `detached`. Fix that !
 
-![](images/igw_attach.png)
- 
+    ![](images/igw_attach.png)
 
-
-### Routing and Security.
+### Routing and Security
 
 5. Create a new `route table` attached to public subnet
 
-Update the new `route table` of your VPC to route traffic to internet.
+    Update the new `route table` of your VPC to route traffic to internet.
 
-Network security is a mandatory requirement of any application/data center design. AWS offers two main constructs to enforce network security : `security groups` and `ACL`
-They both implement the same logic : port/protocol/IP restriction at a different level.
+    Network security is a mandatory requirement of any application/data center design. AWS offers two main constructs to enforce network security : `security groups` and `ACL`
+    They both implement the same logic : port/protocol/IP restriction at a different level.
 
-`ACL` : defines rules in between subnets.
+    `ACL` : defines rules in between subnets.
 
-`port-security`: defines rules at the VM or container level.
+    `port-security`: defines rules at the VM or container level.
 
-![](images/aws-lab-security-acl.svg)
+    ![](images/aws-lab-security-acl.svg)
 
-It's a mandatory construct when you want to host - the next unicorn startup - a web service, but it's also quite handy when you want to SSH your VM without having to rely on a VPN or SSH Bastion.
+    It's a mandatory construct when you want to host - the next unicorn startup - a web service, but it's also quite handy when you want to SSH your VM without having to rely on a VPN or SSH Bastion.
 
 6. Create a `VPC security group` to allow SSH connection from Internet.
 
-Note: Note carefully your `vpc-id` (ex: `vpc-0cc3b79dafe26e572`) before creating the resource: depending the version of AWS WebUI you are using, the VPC field might not be in the dropdown list.
+    Note: Note carefully your `vpc-id` (ex: `vpc-0cc3b79dafe26e572`) before creating the resource: depending the version of AWS WebUI you are using, the VPC field might not be in the dropdown list.
 
-
-**Question 2 (lab report).** Provide a specificatin of your security group.   
+**Question 2 (lab report).** Provide a specificatin of your security group.
 
 ---
 
@@ -205,7 +198,8 @@ Amazon Elastic Compute Cloud (Amazon EC2) provides scalable computing capacity i
 
 An EC2 instance is principally defined by two main attributes an image/software definition called an `AMI` and a server/hardware specification called an `Image type`.
 
-The final pricing of an EC2 instance is mainly driven by the sum of :
+The final pricing of an EC2 instance is mainly driven by the sum of:
+
 - The EC2 instance Image Type price-hour
 - The persistent storage used per GB-month
 - The volume of network data per GB-month
@@ -218,7 +212,8 @@ An Amazon Machine Image (AMI) is the snapshot of the VM you want to use.
 
 For example `Ubuntu 22.04` is `ami-09d56f8956ab235b3` on `us-east-1`.
 
-This is a JSON description of the resource :
+This is a JSON description of the resource:
+
 ```bash
 aws ec2 describe-images --region us-east-1 --image-ids ami-09d56f8956ab235b3
 ```
@@ -275,11 +270,11 @@ When creating an EC2 instance you can browse the catalogue of Public AMI created
 
 Note that the opensource tool [Hashicorp Packer](https://www.packer.io/plugins/builders/amazon) can be helpful to create/automate such resources.
 
-### Image types.
+### Image types
 
 For each application need there's a different Image type available in AWS. Databases tends to favor Memory optimized instances while AI/ML application will required an Instance with accelerated NVIDIA GPU.
 
-Image types define the number of vCPU, memory, instance storage and bandwidth allocated to your EC2 instasnce. 
+Image types define the number of vCPU, memory, instance storage and bandwidth allocated to your EC2 instasnce.
 
 [AWS Documentation : Full list of EC2 instance types](https://aws.amazon.com/ec2/instance-types/)
 
@@ -292,134 +287,46 @@ For the purpose of the lab we recommend the usage of the generic, and perfectly 
 ### SSH Key-Pair
 
 Before creating your first EC2 instance lets create the last requirement : a SSH key-pair.
-On AWS, by default, you cannot access your compute instance using username and password: You need an SSH Key pair. You have the option to create one on AWS or to import yours. For linux instances, AWS will add a pub entry in `~/.ssh/authorized_keys`. If you create your own key you can create a `RSA` or `ED25519` key in `.pem` format. 
+On AWS, by default, you cannot access your compute instance using username and password: You need an SSH Key pair. You have the option to create one on AWS or to import yours. For linux instances, AWS will add a pub entry in `~/.ssh/authorized_keys`. If you create your own key you can create a `RSA` or `ED25519` key in `.pem` format.
 
-1. From AWS EC2 service create or import a new SSH-Key.
+7. From AWS EC2 service create or import a new SSH-Key.
 
-This is up to you to decide how many key-pairs you want to create. **You can only download a created key-pair once from AWS** (so please store the key safely in your personnal folder).
-A single key-pair can be assigned to a EC2 instance at boot time, but noting prevents you to add more keys afterwards. 
+    This is up to you to decide how many key-pairs you want to create. **You can only download a created key-pair once from AWS** (so please store the key safely in your personnal folder).
+    A single key-pair can be assigned to a EC2 instance at boot time, but noting prevents you to add more keys afterwards.
 
+    Note that, if needed, you can generate public key from an AWS .pem key using the following syntax :
 
+    ```bash
+    ssh-keygen -y -f key.pem > key.pub
+    ```
 
-Note that, if needed, you can generate public key from an AWS .pem key using the following syntax :
-```
-ssh-keygen -y -f key.pem > key.pub
-```
-
-### Time to create your first VM.
+### Time to create your first VM
 
 8. From EC2 service select `Instances` then `Launch instances` wizard.
 
 9. Take the time to browse the AMI catalogue
 
-Note : AWS Linux 2, is based on RedHat Enterprise Linux. It comes with long-term support from Amazon and have handy packages to interact with AWS.
-For the purpose of the lab we recommend to use `ubuntu 22.04`as linux distribution, but feel free to try something else.
+    Note : AWS Linux 2, is based on RedHat Enterprise Linux. It comes with long-term support from Amazon and have handy packages to interact with AWS.
+    For the purpose of the lab we recommend to use `ubuntu 22.04`as linux distribution, but feel free to try something else.
 
 10. Take the time to browse the Instance types and check the associated cost.
 
 11. Edit the Network settings and select your VPC, Public Subnet and Security group previously created.
-    And enable the public IP addressing for AWS to allocate a temporary public IP to your VM.
 
-Once your instance is booted you can retrieve its public IP address from the instance list try to connect to it using SSH from your instance.
+    Enable the public IP addressing for AWS to allocate a temporary public IP to your VM.
 
+    Once your instance is booted you can retrieve its public IP address from the instance list try to connect to it using SSH from your instance.
 
 **Question 3.** Provide the IP address of your EC2 instance and show that you can run 'apt update' on this virtual machine.
 
+---
 
+## Bonus activity
 
-**Question 3.** Provide the IP address of your EC2 instance and show that you can run 'apt update' on this virtual machine. 
+12. Create a new EC2 instance with no internet access, called 'pod-<id>-private'. 
 
-
-___ 
-
-## Bonus activity :
-
-12. Create a new EC2 instance with no internet access, called 'pod-<id>-private'. Find a way to have a SSH connection to the private instance from your laptop/VSCode-Server.
+    Find a way to have a SSH connection to the private instance from your laptop/VSCode-Server.
 
 This concludes the AWS VPC EC2 lab.
 
-**Question 3.** Provide the IP address of your EC2 instance and show that you can ssh to this new instance.
-
-**Question 3.** Provide the IP address of your EC2 instance and show that you can ssh to this new instance.
-
-___ 
-
-## Annex
-
-### AWS CLI on Linux
-
-The AWS Command Line Interface (AWS CLI) is an open source tool that enables you to interact with AWS services using commands in your command-line shell. With minimal configuration, the AWS CLI enables you to start running commands that implement functionality equivalent to that provided by the browser-based AWS Management Console from the command prompt in your terminal program. Terraform will use the configuration file of the AWS CLI to retrieve the access key when performing calls to AWS API.
-
-1. Install AWS CLI
-
-```bash
-sudo apt install unzip
-```
-
-```bash
-curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
-```
-
-```bash
-unzip awscliv2.zip
-```
-
-```bash
-sudo ./aws/install
-```
-
-2. Test you AWS CLI installation
-
-```bash
-aws --version
-```
-
-You should have a result similar to:
-
-```bash
-aws-cli/2.6.2 Python/3.9.11 Linux/5.11.0-1022-aws exe/x86_64.ubuntu.20 prompt/off
-```
-
-3. Configure the CLI
-
-Go to IAM service > Users > podx-gin-208 > Security Credentials
-
-![](images/iam-security-credentials.png)
-
-Download or copy paste the the Secret Key it will be displayed only once.
-
-```bash
-aws configure
-```
-```
-AWS Access Key ID [None]: AKIAIOSFODNN7EXAMPLE
-AWS Secret Access Key [None]: wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY
-Default region name [None]: us-west-1
-Default output format [None]: json
-```
-
-You can test the AWS CLI.
-
-[AWS Documentation : AWS CLI usage](https://docs.aws.amazon.com/cli/latest/userguide/cli-chap-using.html)
-```bash
-aws ec2 describe-vpcs --filters Name=tag:lab-id,Values=pod1 
-```
-Example output
-```json
-{
-  "Vpcs": [
-    {
-      "CidrBlock": "192.168.0.0/16",
-      "DhcpOptionsId": "dopt-02cb9007f1d29d0fc",
-      "State": "available",
-      "VpcId": "vpc-0297c21f31b57848e",
-      "OwnerId": "374187570784",
-      "InstanceTenancy": "default",
-      "CidrBlockAssociationSet": [
-        {
-          "AssociationId": "vpc-cidr-assoc-0e933f3263a8b89b7",
-          "CidrBlock": "192.168.0.0/16",
-          "CidrBlockState": {
-            "State": "associated"
-        [...]
-```
+---
