--- a/21.aws-console.md
+++ b/21.aws-console.md
@@ -334,7 +334,7 @@ A single key-pair can be assigned to a EC2 instance at boot time, but noting pre
 
 Install openssh-server
 
-```
+```bash
 sudo apt update 
 sudo apt install -y openssh-server
 mkdir ~/.ssh    
@@ -414,7 +414,7 @@ ssh -i ~/.ssh/YOUR_KEY.pem ubuntu@INSTANCE_PUBLIC_IP_ADDR
 
 Expected output :
 
-```
+```console
 The authenticity of host 'REDACTED (REDACTED)' can't be established.
 ECDSA key fingerprint is SHA256:wbABDsF3ouneOAOB2o9bHuIGnzikZa2qn4HXrIUVaB0.
 Are you sure you want to continue connecting (yes/no/[fingerprint])? yes
@@ -426,15 +426,17 @@ Welcome to Ubuntu 22.04.2 LTS (GNU/Linux 5.19.0-1025-aws x86_64)
 ubuntu@ip-192-168-1-5:~$ 
 ```
 
-
 Default user for linux AMI is based on AMI type :
 
-* For Amazon Linux AMI, the user name is ec2-user.
-* For a CentOS AMI, the user name is centos or ec2-user.
-* For a Debian AMI, the user name is admin.
-* For a Fedora AMI, the user name is fedora or ec2-user.
-* For a RHEL AMI, the user name is ec2-user or root.
-* For a SUSE AMI, the user name is ec2-user or root.
-* For an Ubuntu AMI, the user name is ubuntu.
-* For an Oracle AMI, the user name is ec2-user.
+- For Amazon Linux AMI, the user name is ec2-user.
+- For a CentOS AMI, the user name is centos or ec2-user.
+- For a Debian AMI, the user name is admin.
+- For a Fedora AMI, the user name is fedora or ec2-user.
+- For a RHEL AMI, the user name is ec2-user or root.
+- For a SUSE AMI, the user name is ec2-user or root.
+- For an Ubuntu AMI, the user name is ubuntu.
+- For an Oracle AMI, the user name is ec2-user.
+
 Otherwise, check with the AMI provider.
+
+---
