--- a/22.aws-cli.md
+++ b/22.aws-cli.md
@@ -7,7 +7,7 @@ Automation tools such as Terraform or Ansible will use the configuration file of
 
 ## Task 1. Install AWS CLI
 
-```bash 
+```bash
 sudo apt update && sudo apt install -y unzip jq less groff mandoc
 ```
 
@@ -60,41 +60,47 @@ aws configure sso
 When prompted enter the following information 
 
 **SSO session name (Recommended):**
-```
+
+```console
 YOUR_SSO_USERNAME
 ```
 
-**SSO start URL [None]:** 
-```
+**SSO start URL [None]:**
+
+```console
 https://intuitivesoft.awsapps.com/start#
 ```
 
-**SSO region [None]:** 
-```
+**SSO region [None]:**
+
+```console
 us-east-1
 ```
 
 **SSO registration scopes [sso:account:access]:**
 Leave with default value press return.
 
-**CLI default client Region [None]:** 
-```
+**CLI default client Region [None]:**
+
+```console
 us-east-1
 ```
 
-**CLI default output format [None]:** 
-```
+**CLI default output format [None]:**
+
+```console
 json
 ```
 
-**CLI profile name [DevopsLab-708113109960]:** 
-```
+**CLI profile name [DevopsLab-708113109960]:**
+
+```console
 default
 ```
 
 Expected output
 
-```
+```console
 SSO session name (Recommended): YOUR_SSO_USERNAME
 SSO start URL [None]: https://intuitivesoft.awsapps.com/start#
 SSO region [None]: us-east-1
@@ -402,7 +408,7 @@ echo $INSTANCE_ID
 
 You should have an output similar to :
 
-```
+```console
 i-04342ad763fc1a659
 ```
 
@@ -419,7 +425,7 @@ aws ec2 describe-instances --instance-ids $INSTANCE_ID --output json | jq -r '.R
 
 You should have an output similar to :
 
-```
+```console
 ami-053b0d53c279acc90
 ```
 
@@ -572,7 +578,7 @@ Expected output
 
 Create a bash script named `clean-vpc.sh` with the following content :
 
-```
+```console
 read -p 'Please enter your VPC Name:  ' VPC_NAME
 
 # Retrieve your vpc-id
@@ -635,7 +641,7 @@ Execute your script
 
 Expected Output :
 
-```
+```console
 Cleaning VPC : vpc-006ddcf026ca43388
   Detach Internet Gateway : igw-3e5f7b02f8886a834
   Delete Internet Gateway : igw-3e5f7b02f8886a834
