edit markdown for preview

--- a/21.aws-console.md
+++ b/21.aws-console.md
@@ -1,11 +1,10 @@
 # LAB : AWS Introduction
 
-**Objectives**
+Objectives
 
 - Get familiar with Virtual Private Cloud infrastructures AWS VPC
 - Learn VPC key networking constructs
 - Create on-demand Virtual Machines with AWS EC2
-
 
 ## Task 0. First Connection
 
